--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,11 @@
   margin: auto;
 }
 
-.App-intro {
+.movie-list {
   font-size: large;
+  padding: 2.5em;
 }
+
 
 /* new css for movie component */
 
@@ -60,8 +62,13 @@
   max-width: 25%;
 }
 
+.year {
+  padding: 1em;
+}
 
-
+.movie_title {
+  padding-top: 1em;
+}
 
 .search {
   display: flex;
@@ -70,6 +77,7 @@
   justify-content: center;
   margin-top: 10px;
 }
+
 
 
 
