--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-header {
+.App-toolbar {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: rgb(149, 191, 71);
   height: 70px;
@@ -26,7 +26,6 @@
   padding: 2.5em;
 }
 
-
 /* new css for movie component */
 
 * {
@@ -41,10 +40,6 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-}
-
-.App-header h2 {
-  margin: 0;
 }
 
 .add-movies {
@@ -75,15 +70,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 7em;
 }
-
-
-
-
-
-
-
 
 @media screen and (min-width: 694px) and (max-width: 915px) {
   .movie {
@@ -96,7 +84,6 @@
     max-width: 50%;
   }
 }
-
 
 @media screen and (max-width: 651px) {
   .movie {
